--- a/DoddingtonCarnival.Blazor/DoddingtonCarnival.Blazor.csproj
+++ b/DoddingtonCarnival.Blazor/DoddingtonCarnival.Blazor.csproj
@@ -729,6 +729,7 @@
 
   <ItemGroup>
     <Folder Include="Data\2016\" />
+    <Folder Include="Data\2024\" />
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\fonts\" />
     <Folder Include="wwwroot\js\" />
