--- a/DoddingtonCarnival.Blazor/DoddingtonCarnival.Blazor.csproj
+++ b/DoddingtonCarnival.Blazor/DoddingtonCarnival.Blazor.csproj
@@ -8,13 +8,9 @@
 
   <ItemGroup>
     <Compile Remove="wwwroot\fonts\**" />
-    <Compile Remove="wwwroot\js\**" />
     <Content Remove="wwwroot\fonts\**" />
-    <Content Remove="wwwroot\js\**" />
     <EmbeddedResource Remove="wwwroot\fonts\**" />
-    <EmbeddedResource Remove="wwwroot\js\**" />
     <None Remove="wwwroot\fonts\**" />
-    <None Remove="wwwroot\js\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -743,9 +739,11 @@
     <Folder Include="Data\2024\" />
     <Folder Include="Properties\PublishProfiles\" />
     <Folder Include="wwwroot\images\venues\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BlazorDownloadFile" Version="2.4.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Syncfusion.Blazor" Version="23.1.38" />
     <PackageReference Include="Syncfusion.Blazor.Themes" Version="23.1.38" />
